AG-3606 - fixed a bug with floating filters inputs overflowing the header container

--- a/community-modules/core/src/styles/ag-grid.scss
+++ b/community-modules/core/src/styles/ag-grid.scss
@@ -47,6 +47,7 @@ ag-grid, ag-grid-angular, ag-grid-ng2, ag-grid-polymer, ag-grid-aurelia  {
     align-items: center;
     line-height: normal;
     position: relative;
+    overflow: hidden;
 }
 
 // setting shake class to an item will give it a left ot right animation
@@ -675,6 +676,7 @@ ag-grid, ag-grid-angular, ag-grid-ng2, ag-grid-polymer, ag-grid-aurelia  {
 
 .ag-filter-filter {
     flex: 1 1 auto;
+    overflow: hidden;
 }
 
 .ag-filter-condition {
@@ -692,6 +694,7 @@ ag-grid, ag-grid-angular, ag-grid-ng2, ag-grid-polymer, ag-grid-aurelia  {
     display: flex;
     flex: 1 1 auto;
     height: 100%;
+    overflow: hidden;
 }
 
 .ag-floating-filter-full-body {
